# robustraster

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile_edit  HOW_TO_CREATE_LOCK.txt  HOW_TO_CREATE_PKG.txt  LICENSE  README.md  debug_docker_dask.py  demo.ipynb  demo_local_rasters.ipynb  distributed.yaml  environment.yml  fix_paper.py  meta.yaml  patch_notebooks.py  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py  test.py  test_exec.py  test_vrt.py  tmp_replace.py  update_notebook.py
anaconda_build/: conda_build_config.yaml  environment.yml  meta.yaml  rr_anaconda_environment.yml
anaconda_recipe/: meta.yaml
demos/: GEARS_Demo_3_4_2025.ipynb  demo.ipynb  demo_taylor_syn_treelist.ipynb  demo_taylor_syn_treelist_taylors_changes.ipynb  demo_taylor_syn_treelist_taylors_changes2.ipynb  docker_demo.ipynb  ndvi_us_demo.ipynb  ndvi_us_demo_r_example.ipynb  paper_examples.ipynb
docs/: 00_install.md  01_index.md  01_overview.md  02_quickstart.md  03_what_is_dask.md  04_api_reference.md  04_run_function.md  05_tuning.md  index.md  quickstart.md  run_function.md  tuning.md  what_is_dask.md
experiment_code/: GEARS_Demo_3_4_2025.ipynb  big_data_test.ipynb  compute_optimal_config.ipynb  dask_forum_example.ipynb  demo.ipynb  download.ipynb  ee.ipynb  ee_old.ipynb  export_code.ipynb  fix_rasterdataset.ipynb  gears_lab_meeting_notebook.ipynb  html_parse.ipynb  large_graph_size.ipynb  local.ipynb  optimal_chunks_20250122_143358.json  timetracker.py  write_to_cloud.ipynb
geometry/: Plumas_National_forest.csv  Plumas_National_forest.dbf  Plumas_National_forest.shp  (+2 more)
(+52 files in other folders)
