[project]
name = "example_package_adrianom"
version = "0.0.1"
authors = [
  { name="Adriano Matos", email="adrianom@nevada.unr.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[testpypi]
  username = __token__
  password = pypi-AgENdGVzdC5weXBpLm9yZwIkOGVhZGRjNzMtZjQxNy00MjcwLWFmYzEtYmJhZjMyOWIxMTI5AAIqWzMsIjBlOGI3MGQ3LTU5YjQtNDI2ZC1iNGFlLTYyMGI4OTYwZWViZSJdAAAGIL2Ikdgt6YcvY1w3Ys9s07OF3z_a_SY8pLAKJknfMJqw